// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/ActiveState/activity-feed/ActiveState should correctly render with an inline error if some feed items fail to fetch 1`] = `
<Fragment>
  <InlineError
    title={
      <FormattedMessage
        0="t"
      />
    }
  >
    <FormattedMessage
      0="m"
    />
  </InlineError>
  <ActiveState
    currentFileVersionId="123"
    currentUser={
      {
        "id": "user_123445",
        "name": "Rihanna",
      }
    }
    items={[]}
    onAnnotationSelect={[Function]}
  />
</Fragment>
`;

exports[`elements/content-sidebar/ActiveState/activity-feed/ActiveState should render empty state 1`] = `
<ActiveState
  currentFileVersionId="123"
  currentUser={
    {
      "id": "user_123445",
      "name": "Rihanna",
    }
  }
  items={[]}
  onAnnotationSelect={[Function]}
/>
`;

exports[`elements/content-sidebar/ActiveState/activity-feed/ActiveState should render items 1`] = `
<ul
  className="bcs-activity-feed-active-state"
>
  <ForwardRef(ActivityItem)
    className="bcs-activity-feed-annotation-activity"
    data-testid="annotation-activity"
    hasNewThreadedReplies={false}
    isFocused={false}
    isHoverable={true}
    key="annotationanno_123"
  >
    <ActivityThread
      currentUser={
        {
          "id": "user_123445",
          "name": "Rihanna",
        }
      }
      data-testid="activity-thread"
      hasNewThreadedReplies={false}
      hasReplies={false}
      onHideReplies={[Function]}
      onReplyCreate={[Function]}
      onReplyDelete={[Function]}
      onReplyEdit={[Function]}
      onReplySelect={[Function]}
      onShowReplies={[Function]}
    >
      <AnnotationActivity
        currentUser={
          {
            "id": "user_123445",
            "name": "Rihanna",
          }
        }
        isCurrentVersion={true}
        item={
          {
            "created_at": "2018-07-03T14:43:52-07:00",
            "created_by": {
              "id": "user_123445",
              "name": "Rihanna",
            },
            "description": {
              "message": "This is an annotation",
            },
            "file_version": {
              "id": "123",
            },
            "id": "anno_123",
            "target": {
              "location": {
                "type": "page",
                "value": 1,
              },
              "type": "region",
            },
            "type": "annotation",
          }
        }
        onSelect={[Function]}
      />
    </ActivityThread>
  </ForwardRef(ActivityItem)>
  <ForwardRef(ActivityItem)
    data-testid="comment"
    hasNewThreadedReplies={false}
    isFocused={false}
    isHoverable={true}
    key="commentc_123"
  >
    <ActivityThread
      currentUser={
        {
          "id": "user_123445",
          "name": "Rihanna",
        }
      }
      data-testid="activity-thread"
      hasNewThreadedReplies={false}
      hasReplies={false}
      onHideReplies={[Function]}
      onReplyCreate={[Function]}
      onReplyDelete={[Function]}
      onReplyEdit={[Function]}
      onReplySelect={[Function]}
      onShowReplies={[Function]}
    >
      <Comment
        created_at="2018-07-03T14:43:52-07:00"
        created_by={
          {
            "id": 11,
            "name": "Akon",
          }
        }
        currentUser={
          {
            "id": "user_123445",
            "name": "Rihanna",
          }
        }
        id="c_123"
        onDelete={[Function]}
        onEdit={[Function]}
        onSelect={[Function]}
        permissions={
          {
            "can_delete": false,
            "can_edit": false,
            "can_reply": false,
            "can_resolve": false,
          }
        }
        tagged_message="test @[123:Jeezy] @[10:Kanye West]"
        type="comment"
      />
    </ActivityThread>
  </ForwardRef(ActivityItem)>
  <ForwardRef(ActivityItem)
    className="bcs-version-item"
    data-testid="version"
    key="file_versionf_123"
  >
    <Version
      created_at="2018-07-03T14:43:52-07:00"
      id="f_123"
      modified_at="2018-07-03T14:43:52-07:00"
      modified_by={
        {
          "id": 11,
          "name": "Akon",
        }
      }
      trashed_at="2018-07-03T14:43:52-07:00"
      type="file_version"
    />
  </ForwardRef(ActivityItem)>
  <ForwardRef(ActivityItem)
    className="bcs-activity-feed-task-new"
    data-testid="task"
    isFocused={false}
    key="taskt_345"
  >
    <ForwardRef
      assigned_to={
        {
          "entries": [
            {
              "id": "ta_123",
              "permissions": {
                "can_delete": true,
                "can_update": true,
              },
              "role": "ASSIGNEE",
              "status": "NOT_STARTED",
              "target": {
                "id": 11,
                "name": "Akon",
              },
              "type": "task_collaborator",
            },
          ],
          "limit": 20,
          "next_marker": null,
        }
      }
      created_at="2018-07-03T14:43:52-07:00"
      created_by={
        {
          "target": {
            "id": 11,
            "name": "Akon",
          },
        }
      }
      currentUser={
        {
          "id": "user_123445",
          "name": "Rihanna",
        }
      }
      description="test"
      due_at="2018-07-03T14:43:52-07:00"
      id="t_345"
      modified_at="2018-07-03T14:43:52-07:00"
      permissions={
        {
          "can_create_task_collaborator": true,
          "can_create_task_link": true,
          "can_delete": true,
          "can_update": true,
        }
      }
      status="NOT_STARTED"
      task_links={
        {
          "entries": [
            {
              "target": {
                "id": "f_123",
                "type": "file",
              },
            },
          ],
        }
      }
      task_type="GENERAL"
      type="task"
    />
  </ForwardRef(ActivityItem)>
  <ForwardRef(ActivityItem)
    className="bcs-activity-feed-app-activity"
    data-testid="app-activity"
    key="app_activityapp_activity_12344556"
  >
    <AppActivity
      activity_template={
        {
          "id": "template_09887654",
        }
      }
      app={
        {
          "icon_url": "foo.jpg",
          "id": "app_123456",
          "name": "My App",
        }
      }
      created_at="2018-07-03T14:43:52-07:00"
      created_by={
        {
          "id": "user_12345567",
        }
      }
      currentUser={
        {
          "id": "user_123445",
          "name": "Rihanna",
        }
      }
      id="app_activity_12344556"
      permissions={
        {
          "can_delete": true,
        }
      }
      rendered_text="this is text and a <a>link</a>"
      type="app_activity"
    />
  </ForwardRef(ActivityItem)>
</ul>
`;
